--- a/backend/package.json
+++ b/backend/package.json
@@ -1,34 +1,18 @@
 {
   "name": "organ-donation-backend",
   "version": "1.0.0",
-  "description": "Backend API for Organ Donation Matching Platform with Greenfield Storage",
+  "description": "Backend server for organ donation matching system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "dev": "node server.js"
   },
-  "keywords": [
-    "organ-donation",
-    "matching",
-    "greenfield",
-    "blockchain",
-    "healthcare"
-  ],
-  "author": "Organ Donation Platform Team",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "body-parser": "^1.20.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  }
+  "keywords": ["organ-donation", "matching", "express"],
+  "author": "",
+  "license": "MIT"
 }
